# spacer_matching_bench

./: .gitignore  README.md  pyproject.toml  system_info.json  tool_styles.json
.github/workflows/: pages.yml  static.yml
draft/: TODO.MD  build_supplementary_pdf.py  response_to_reviewers.md
draft/main/: index.qmd  references.bib
draft/main/figures/main/: tool_selection_flowchart.mmd
draft/supp/: rawmd.notmd  supplementary.qmd
lets-plot-images/results/real_data/subsamples_analysis/: recall_by_fraction_faceted_bars.html  recall_error_bars_by_tool.html  recall_heatmap_by_fraction.html
lets-plot-images/results/real_data/subsamples_analysis/plots_fraction_1/: tool_performance_by_hamming_distance_cumulative.html  tool_performance_by_hamming_distance_exact.html
lets-plot-images/results/simulated/ns_100000_nc_20000/plots/: tool_recall_exact_hamming.html
lets-plot-images/results/simulated/ns_500_nc_5000_HIGH_INSERTION_RATE/plots/: tool_recall_exact_hamming.html
notebooks/: Performance_imgvr4.ipynb  Performance_imgvr4_v2.ipynb  Performance_simulated.ipynb  Performance_simulated_v2.ipynb  Prepare_all_jobs.ipynb  Resource_usage.ipynb  Resource_usage_imgvr4.ipynb  Resource_usage_imgvr4_subsamples_maxdistance_5.ipynb  antonio_14_colors.json  check_running_jobs.ipynb  distance_metric_analysis.ipynb  fetch_real_data.ipynb  get_tool_version_pretty.ipynb  get_tool_versions.ipynb  imgvr4_prep_jobs.ipynb  real_spacer_inspection.ipynb  scaling_cheack_imgvr4_subsamples.ipynb  spacer_inspection.ipynb  subsample_prep.ipynb  tool_styles.json
notebooks/obsolete/: Performance_imgvr4.ipynb
public/supplementary/: index.html
public/supplementary/_tex/: supplementary.tex
public/supplementary/site_libs/bootstrap/: bootstrap-8e16f0cfae4ae35510140c56ae896cd7.min.css
results/real_data/plots/: resource_usage_real_cputime_vs_memory_with_size.html
results/simulated/plots/: cpu_time_scaling_with_search_space.html  mean_recall_error_bars.html  resource_usage.html  tool_recall_diff_heatmap_ns_100000_nc_20000_hamming3.html  tool_recall_diff_heatmap_ns_100000_nc_20000_hamming_3.html  tool_recall_heatmap_hamming3.html  tool_recall_high_insertion_hamming3.html
src/bench/: __init__.py  bench.py  cli.py
src/bench/commands/: __init__.py  compare_results.py  full_run.py  generate_scripts.py  run_tools.py  simulate.py  subsample.py
src/bench/utils/: add_sim_prefix.py  analyze_missed_matches.py  arg_parsers.py  benchy_env.sh  functions.py  plot_performance.py  pyseff.py  slurm_array.sh  test_alignments.py  tool_commands.py  tool_env_maker.sh
src/rust_simulator/: Cargo.toml  README.md
src/rust_simulator/src/: lib.rs
tool_configs/: blastn.json  bowtie1.json  bowtie2.json  indelfree_bruteforce.json  indelfree_indexed.json  mmseqs2.json  sassy.json  strobealign.json  tool_versions.csv  x_mapper.json
tool_configs/obsolete/: bbmapskimmer.json.bak  bbmapskimmermod.json.bak  blastn.json  blastn2.json  bwa_mem.json  dimaond.json_T  hisat2.json.bak  lexicmap.json  minimap2.json  minimap2_mod.json  minimap2_og.json_T  mmseqs2_map.json  spacer_containment.json
